Before Post Data To mySQL

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,22 @@
     <string name="app_name">Health Record</string>
 
     <string name="title">Health Record</string>
-    <string name="user">User :</string>
-    <string name="pass">Password :</string>
-    <string name="sign_up">Sign Up</string>
-    <string name="sign_in">Sign In</string>
+    <string name="User">User :</string>
+    <string name="Pass">Password :</string>
+    <string name="Sign_up">Sign up</string>
+    <string name="Sign_in">Sign in</string>
+    
+    <string name="title_signup">สมัครสมาชิค</string>
+    <string name="name">ชื่อ นามสุกล</string>
+    <string name="email">eMail</string>
+    <string name="sex">เพศ</string>
+    <string name="male">ชาย</string>
+    <string name="female">หญิง</string>
+    <string name="age">ช่วงอายุ</string>
+    <string name="weight">น้ำหนัก (กิโลกรัม)</string>
+    <string name="height">ส่วนสูง (เซ็นติเมตร)</string>
+    <string name="save">บันทึกข้อมูล</string>
+
+
 
 </resources>
